@@ -1,3 +1,9 @@
+2021-03-11 Sergey Belyashov <sergey.belyashov@gmail.com>
+
+	* src/z80/gen.c,
+	  src/z80/main.c:
+	  Add basic support for GETBYTE iCode for all Z80 ports.
+
 2021-03-10 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c:
